Add chunking to saveAll